objects/Project_Item__c.object
<CustomObject>
    <label>Project Item</label>
    <nameField>
        <label>Project Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Unit_Item__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>Project_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text(Item__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Items</relationshipLabel>
        <relationshipName>Project_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Item_Id__c</fullName>
        <formula>Item__r.Unit_Item_Id__c</formula>
        <label>Unit Item Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Unique_ID__c</fullName>
        <description>will be used in backend for identifying the loaded sql table data for the project items to avoid duplicates</description>
        <externalId>true</externalId>
        <label>Project Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Item_Number__c</fullName>
        <description>Standard field</description>
        <label>Project Item Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>